--- a/sideProjects/portfolio/src/Components/Todo/Todo.module.css
+++ b/sideProjects/portfolio/src/Components/Todo/Todo.module.css
@@ -65,8 +65,10 @@
     font-size: 2rem;
     font-weight: 700;
     margin: 1rem 0;
-    color: red;
+    padding: .5rem 1rem;
+    color: rgb(248, 248, 248);
     font-style: italic;
+    background: linear-gradient(118.51deg, #fa0000 14.63%, #000066 100%);
 }
 
 h3 {
